# united_traders

./: Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yaml
data/nginx/: app.conf
migrations/2021-05-20-205500_create_logs/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/logs/: db.rs  routes.rs
src/server/: errors.rs  routes.rs
static/: index.html
