[package]
name = "united_traders"
version = "0.1.0"
authors = ["Dmitry Novikov <novikov.dm.al@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono", "serde_json"] }
actix-web = "3"
env_logger = "0.8.3"
diesel_migrations = "1.4.0"
r2d2 = "0.8.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.10", features = ["serde"] }
diesel-derive-enum = { version = "1", features = ["postgres"] }